; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_commit-tree.c_parse_message_arg_callback.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_commit-tree.c_parse_message_arg_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.strbuf* }
%struct.strbuf = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @parse_message_arg_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_message_arg_callback(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.strbuf*, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load %struct.strbuf*, %struct.strbuf** %9, align 8
  store %struct.strbuf* %10, %struct.strbuf** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @BUG_ON_OPT_NEG_NOARG(i32 %11, i8* %12)
  %14 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %15 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %20 = call i32 @strbuf_addch(%struct.strbuf* %19, i8 signext 10)
  br label %21

21:                                               ; preds = %18, %3
  %22 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @strbuf_addstr(%struct.strbuf* %22, i8* %23)
  %25 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %26 = call i32 @strbuf_complete_line(%struct.strbuf* %25)
  ret i32 0
}

declare dso_local i32 @BUG_ON_OPT_NEG_NOARG(i32, i8*) #1

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @strbuf_complete_line(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
